--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Azhao'IT
+email: azhao.1981@gmail.com
+description: "一台电脑,一根网线,一个世界!"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://blog.azhao.im/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: azhao_1981
+github_username:  azhao1981
 
 # Build settings
 markdown: kramdown
